# FastAPICrashCourse

./: README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 132730ecd046_database_tracking.py
apivirtualenv/: .env  config.py  database.py  main.py  main2.py  main3.py  models.py  oauth2.py  router_main.py  schemas.py  utils.py
apivirtualenv/routers/: auth.py  post.py  user.py  vote.py
